--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.7.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
