--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
@@ -32,7 +32,10 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/dashboard/layout.js", "src/app/page.js", "src/app/layout.js", "src/components/skills.jsx"  ],
+,
+    "src/app/dashboard/layout.tsx", "src/app/page.ts", "src/app/layout.tsx",
+    "src/components/home/Skills.jsx"
+  ],
   "exclude": [
     "node_modules"
   ]
