--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.7.4",
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "sweetalert2": "^11.22.0",
+    "ytdl-core": "^4.11.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
