--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "mongoose": "^8.14.1",
     "next": "15.3.1",
     "nodemailer": "^6.10.1",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-quill": "^2.0.0",
     "sweetalert2": "^11.22.0",
     "ytdl-core": "^4.11.5",
     "zustand": "^5.0.5"
@@ -35,6 +37,7 @@
     "@types/react": "19.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "5.8.3"
   }
 }
