--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "sharp": "^0.34.3",
     "sweetalert2": "^11.22.0",
     "zustand": "^5.0.5"
   },
