--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "bootstrap-icons": "^1.13.1",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
-    "next": "15.3.3",
+    "mongoose": "^8.19.0",
+    "next": "^15.5.4",
     "nodemailer": "^6.10.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "sharp": "^0.34.3",
-    "sweetalert2": "^11.22.0",
-    "zustand": "^5.0.5"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-quill": "^2.0.0",
+    "sharp": "^0.34.4",
+    "sweetalert2": "^11.23.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "22.15.3",
-    "@types/nodemailer": "^6.4.17",
+    "@types/nodemailer": "^6.4.20",
     "@types/react": "19.1.2",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
+    "tailwindcss": "^4.1.14",
     "typescript": "5.8.3"
   }
 }
